# rdf12conv

./: Dockerfile  README.md  pyproject.toml  rdf_converter.py
.github/workflows/: ci.yml  publish-pypi.yml.disabled
